[package]
name = "ece"
version = "2.4.1"
authors = [
    "Firefox Sync Team <sync-team@mozilla.com>",
    "JR Conlin <src+git@jrconlin.com>",
]
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/mozilla/rust-ece"
description = "Encrypted Content-Encoding for HTTP Rust implementation."
keywords = ["http-ece", "web-push"]

[dependencies]
byteorder = "1.3"
thiserror = "2.0"
base64 = "0.22"
hex = "0.4"
hkdf = { version = "0.12", optional = true }
lazy_static = { version = "1.5", optional = true }
once_cell = "1.21"
openssl = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = { version = "0.10", optional = true }
# RustCrypto backend dependencies
p256 = { version = "0.13", optional = true, features = ["ecdh", "std"] }
aes-gcm = { version = "0.10", optional = true }
rand_core = { version = "0.6", optional = true, features = ["std"] }

[features]
default = ["backend-openssl", "serializable-keys"]
serializable-keys = ["serde"]
backend-openssl = ["openssl", "lazy_static", "hkdf", "sha2"]
backend-rustcrypto = ["p256", "aes-gcm", "hkdf", "sha2", "rand_core"]
backend-test-helper = []

[package.metadata.release]
no-dev-version = true
